chore(CU-86bygkpm3)added enable/disable wallets integration tests
