# internal/grpc/handler_wallet_get_info.go
@@ -83,7 +83,7 @@ func (h *GetWalletInfoHandler) Handle(ctx context.Context,
 			WalletUUID: walletItem.UUID.String(),
 			WalletHash: walletItem.MnemonicHash,
 		},
-		WalletStatus: pbApi.WalletStatus(walletItem.Status),
+		WalletStatus: pbCommon.WalletStatus(walletItem.Status),
 	}, nil
 }
 
